@@ -1,3 +1,5 @@
   * Fixed handling the buffer_path argument. (issue #5)
 
   * Fixed error message when an invalid server_name is used. (issue #6)
+
+  * Update siridb-connector and qpack
